--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
         "no-shadow": "off",
         "no-param-reassign": "off",
         "eol-last": "off",
+        "no-await-in-loop": "off",
+        "import/prefer-default-export": "off",
         "import/extensions": [
             1,
             {
